DTSCCI-5038 Refactor import and add roles scripts